# decstr

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: decimal.rs
examples/: arbitrary-precision.rs  basic.rs  pi.txt
src/: binary.rs  bitstring.rs  convert.rs  error.rs  lib.rs  num.rs  text.rs
src/binary/: buf.rs  combination.rs  exponent.rs  num.rs  significand.rs
src/binary/buf/: arbitrary.rs  arbitrary_size.rs  dynamic.rs  dynamic_size.rs  fixed.rs  fixed_size.rs
src/bitstring/: arbitrary.rs  dynamic.rs  fixed128.rs  fixed32.rs  fixed64.rs
src/convert/: from_binary_float.rs  from_int.rs  from_str.rs
src/text/: buf.rs  finite.rs  infinity.rs  nan.rs
src/text/buf/: array.rs  buffered.rs  pre_formatted.rs  str.rs  vec.rs
