[package]
name = "decstr"
version = "0.1.1"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/decstr"
description = "IEEE 754 decimal floating point bitstrings"
repository = "https://github.com/KodrAus/decstr"
readme = "README.md"
keywords = ["serialization", "no_std", "decimal"]
categories = ["encoding", "no-std"]

[features]
"std" = []
"arbitrary-precision" = [
    "std",
    "dep:num-bigint",
    "dep:num-traits",
]

# Used to guarantee consistent conversion of binary floating point
# to decimal, where decimal numbers are not normalized
[dependencies.ryu]
version = "1"

# Used to effciently convert binary integers to decimal
[dependencies.itoa]
version = "1"

# Used for the exponent of arbitrary precision decimals
[dependencies.num-bigint]
version = "0.4"
optional = true

# Used for the exponent of arbitrary precision decimals
[dependencies.num-traits]
version = "0.2"
optional = true

# Used to sanity check the implementation
[dev-dependencies.dec]
version = "0.4"
